# CarpenterGroup

./: Changelog.md  Changelog.txt  LICENSE
CarpenterLabPython/: Changelog.md  GeneralLibrary.py  GeneratesCMOSCalibrationData.py  Graphing.py  HowToSetupAProject.txt  ImageProcessing.py  MicroscopeController.py  __init__.py  fits.py  pyproject.toml
CarpenterLabPython/CarpenterLabPython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
CarpenterLabPython/Distribution/: pyproject.toml
CarpenterLabPython/Uncorrected/: ExampleCode.py  LabViewFunctions.py  MicroscopeController.py  Program.py
ExamplePrograms/: ApplyGain.py  CalculateFFT.py  CalibrateCamera.py  GraphingTest.py  PlotDeviance.py  PlotFFTs.py  PlotHistogram.py  PlotSTD.py  ProcessData.py  Program.py  StageRinging.py
Other/: GenerateProject.py  PlotHistogram.py  SimulateSMData.py  SinglePixelFit.py
