[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CarpenterLabPython"
version = "1.0.0"

[project.scripts]

[tool.setuptools]
py-modules = ['GeneratesCMOSCalibrationData','ImageProcessing','MicroscopeController','Graphing','GeneralLibrary','fits']